...
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/TopHeaderBackground"
            android:fontFamily="@font/kanit"
            android:padding="12dp"
            android:text="Delete"
            app:cornerRadius="12dp"
            android:textColor="@color/text_colour" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
