<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_my_mood_history"
        android:icon="@drawable/home_icon"
        android:title="Home"
        android:visible="false"/>
    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/map_icon"
        android:title="Map"/>
    <item
        android:id="@+id/navigation_follow_requests"
        android:icon="@drawable/follow_requests_icon"
        android:title="Follow Requests"/>
    <item
        android:id="@+id/navigation_following"
        android:icon="@drawable/following_icon"
        android:title="Following"/>
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_icon"
        android:title="Profile"/>
</menu>